expo/gbe/static/styles/base.css
/* Base CSS styling for burlexpo */
body {
  margin: 0px;
  border: 0px;
  padding: 0px;
}

div#container {
/*    width:774px; */
    top:0;
/*    margin: 0px auto 5px;*/
}

    
div#banner {
    position=fixed; top: 0; bottom: 129px; left:auto;right:auto;
}

div#nav { 
    top:130px; bottom:0; left:0; 

}

div#nav ul {
   width: 12em; 

}
div#nav ul li {
    list-style:none;
    text-align:left;
    margin:0;

}

div#nav ul li a{
    display: block;
    text-decoration: none;

}

div#nav ul li a:link, a:visited{
    color:#F00;
}

div#nav ul li a:hover{
    color:#0FF;
    background:#000;
}

div#nav ul li a:active {
    color:#0FF;
}


div#main-content{
    margin-left: 20px; margin-right: 20px;

}

div#middle {
    /* The menu scrolls are ugly and driving me crazy.  Change back if you want guys. -MDB */
    
    /* overflow:scroll; */
    overflow: hidden;
    padding: 10px 3px 10px 20px;
}


div.left_col {
    width:32%;
    float:left;
    margin: 10px;
    padding: 10px;
}

div.right_col {
    width:32%;
    float:right;
}

div.bid_col {
    width:60%;
    float:right;
}


div.side_box {
    border: 1px solid black;
    margin: 10px;
    padding: 10px;
}

/* used in bid review and readonly forms */
div.review-pane {
    border: 1px solid black;
    margin: 10px;
    padding: 10px;
    background-color: #E3E3E3;
}

h2.review-title
{
    margin: 0px;
    padding: 0px;
}

h3.readonlyform
{
    margin: 0px;
    padding: 0px;
}

.sched-table
{
    border: 1px solid black;
    border-collapse:collapse;
    padding: 2px;
    vertical-align: top;
 }
 
 .sched-header
{
    border: 1px solid black;
    border-collapse:collapse;
    color: white;
    background-color: maroon;
    padding: 2px;
    vertical-align: top;
 }
 
.bid-table
{
    border: 1px solid black;
    border-collapse:collapse;
    padding: 2px;
    vertical-align: top;
 }
 
.bid-form
{
    border: 1px solid black;
    border-collapse:collapse;
    padding: 2px;
    text-align: center;
 }
.error_row
{
    color: red;
}
.errorlist
{
    color: red;
}

.how_volunteer
{
    width: 125;
 }
 
hr.bid-table
{
    border: 0; height: 1px;
    background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.25), rgba(0,0,0,0));
    background-image: -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.25), rgba(0,0,0,0));
    background-image: -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.25), rgba(0,0,0,0));
    background-image: -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.25), rgba(0,0,0,0));
}


/*used for help text*/
span.dropt {border-bottom: background: white;}
span.dropt:hover {text-decoration: none; background: #ffffff; z-index: 6; }
span.dropt span {position: absolute; left: -9999px;
  margin: 20px 0 0 0px; padding: 3px 3px 3px 3px;
  border-style:solid; border-color:black; border-width:1px; z-index: 6;}
span.dropt:hover span {left: 30%; background: #ffffff;} 
span.dropt span {position: absolute; left: -9999px;
  margin: 4px 0 0 0px; padding: 3px 3px 3px 3px; 
  border-style:solid; border-color:black; border-width:1px;}
span.dropt:hover span {margin: 0px 0 0 0px; background: #ffffff; z-index:6;} 

td.form_label {width: 150px;}

/* Fashion Fair display of vendors.  Also not bad for performers... */

.vtable
{
  border: 1px solid black;
  border-collapse: collapse;
}

div.vimg
{
  padding: 10px;
  width: 150px;
  margin-left: auto;
  margin-right: auto;
  
}

.vaddress
{
  font-size:12px;
  font-family: sans-serif;
  font-style: italic;
  text-align:center;
}

.vname
{
  font-size:20px;
  font-family: sans-serif;
  font-weight: bold;
  text-align:center;
  text-transform: capitalize;
}

.vheader
{
  border:solid 2px black;
}

.vheadertext
{
  font-size:24px;
  font-family: sans-serif;
  font-weight: bold;
  text-align:center;
  text-transform: capitalize;
}

div.vname
  {
    height: 40px;
    vertical-align: middle;
    background: -webkit-linear-gradient(0deg, WhiteSmoke, lightgray); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(0deg, WhiteSmoke, lightgray); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(0deg, WhiteSmoke, lightgray); /* For Firefox 3.6 to 15 */
    background: linear-gradient(0deg, WhiteSmoke, gray); /* Standard syntax (must be last) */
}

div.vdesc
{
    border: 0px
    width: 250px;
}



.vendorff
{
   border:solid 2px black;
   width: 250px;
   vertical-align: top;
   background-color: white;
   padding: 0px;
   margin: 0px;
}

.vimage
{
  width: 125px;
  display:block;
  margin: 0 auto;
  
}

/* Used for the hover on the performer grid */
span.perfhover
{
  border-bottom: background: white;
  z-index: 1;
  position: relative;
}
span.perfhover:hover
{
  text-decoration: none;
  background: #ffffff;
  z-index: 6;
}
span.perfhover span
{
  position: absolute;
  left: -99999px;
  margin: 20px 0 0 0px;
  padding: 3px 3px 3px 3px;
  border-style:solid;
  border-color:black;
  border-width:1px;
  z-index: 6;
}
/*
span.perfhover span
{
  position: absolute;
  left: -9999px;
  margin: 4px 0 0 0px;
  padding: 3px 3px 3px 3px; 
  border-style:solid;
  border-color:black;
  border-width:1px;
}
*/
span.perfhover:hover span
{
  left: -200px;
  top: 20px;
  width: 500px;
  margin: 20px 0 0 170px;
  background: #ffffff;
  z-index:6;
} 


td.title
{
  border: solid 1px black; 
  width: 20%;
  padding: 2px;
}

td.describe
{
  border:solid 1px black; 
  width: 40%;
  padding: 2px;
}

.helptext
{
  font-style: italic;
  color: grey;
}

.listblock
{
  padding-right: 20px;
  padding-left: 20px;
}
.listheader
{
  color: #333333;
  font-family: Impact, Charcoal, sans-serif;
  letter-spacing: 1px;
}
.listdetails
{
}
.listlabel
{
 font-weight: bold;
}
.listdesc
{
  padding-top: 10px;
  white-space: pre-wrap;
}
.listline
{
  padding: 0;
  border: none;
  border-top: medium double #333;
  color: #333;
  text-align: center;
  width: 90%
}
  
.listline:after
{
  display: inline-block;
  position: relative;
  top: -0.7em;
  font-size: 1.5em;
  padding: 0 0.25em;
  background: white;
}


/*Schedule detail view*/
.sched_block
{
    margin: 10px;
    width: 100%;
}
.sched_desc
{
  padding-top: 10px;
  align:left;
  width:75%;
  display: inline-block;
  vertical-align: top;
}
.sched_times
{
  width:20%;
  align: right;
  display: inline-block;
  border-style: double;
  background: #aaffff;
  border-radius: 8px;
  padding: 8px;
}
.bio_block
{
    border: 1px solid black;
    margin: 10px;
    padding: 10px;
}
.sched_detail_title
{
  color: #333333;
  font-family: Impact, Charcoal, sans-serif;
  letter-spacing: 1px;
}
.sched_detail
{
 font-weight: bold;
}
.sched_length
{
  
}
.sched_details
{
}

.tickets
{
  
}
.ticket_link
{
  
}
.ticket_list
{
  
}
.ticket_list_item
{
  
}
.ticket_name
{
 font-weight: bold;
}
.sched_bio_image
{
  width: 300px;
  margin: 3px;
  display: inline-block;
}
.bio_image_block
{
  width: 28%;
  text-align:right;
  display: inline-block;
}
.bio_words
{
  width: 70%;
  display: inline-block;
  vertical-align: top;
}


table.events-table
{
    border:1px solid;
    
}

table.events-table th
{
    border:1px solid;
    text-align: left;
}

table.events-table td
{
    border:1px solid;
}

tr.event_edit_row
{
  vertical-align: top;
} 

tr.event_opp_row
{
  vertical-align: top;
} 

table.event_opps  tr:nth-child(even)
{
  background-color: #CCC;
} 

table.event_opps  tr:nth-child(odd)
{
  background-color: #EEE;
} 

tr.blank_row
{
  background-color: #D0D0D0 ;
}


div.alert 
{
    background-color: rgba(241, 221, 91, 01);
}

/* landing page layouts
    taken from:  http://matthewjamestaylor.com/blog/perfect-3-column.htm */

/* column container */
.colmask {
	position:relative;	/* This fixes the IE7 overflow hidden bug */
	clear:both;
	float:left;
	width:100%;			/* width of whole page */
	overflow:hidden;		/* This chops off any overhanging divs */
}
/* common column settings */
.colright,
.colmid,
.colleft {
	float:left;
	width:100%;			/* width of page */
	position:relative;
}
.col1,
.col2,
.col3 {
	float:left;
	position:relative;
	padding:0 0 1em 0;	/* no left and right padding on columns, we just make them narrower instead 
					only padding top and bottom is included here, make it whatever value you need */
	overflow:hidden;
}
/* 3 Column settings */
.threecol {
}
.threecol .colmid {
	right:33%;			/* width of the right column */
}
.threecol .colleft {
	right:33%;			/* width of the middle column */
}
.threecol .col1 {
	width:31%;			/* width of center column content (column width minus padding on either side) */
	left:102%;			/* 100% plus left padding of center column */
}
.threecol .col2 {
	width:31%;			/* Width of left column content (column width minus padding on either side) */
	left:36%;			/* width of (right column) plus (center column left and right padding) plus (left column left padding) */
}
.threecol .col3 {
	width:30%;			/* Width of right column content (column width minus padding on either side) */
	left:73%;			/* Please make note of the brackets here:
					(100% - left column width) plus (center column left and right padding) plus (left column left and right padding) plus (right column left padding) */
}
.landing_box{
	border: 1px solid black;
        padding: 10px;
}


/* Landing page, right-column blocks */

div.landing_box>div.act_section {
    background-color:#FF9999;

}

div.bid_review_section{
    background-color:#99FF99;

}

div.landing_box>div.class_section {
    background-color:#9999FF;

}

div.landing_box>div.performer_section {
    background-color:#FF99FF;

}


div.landing_box>div.show_section {
    background-color:#99FFFF;

}


div.landing_box>div.volunteer_section {
    background-color:#FFFF99;

}

div.landing_box>div.vendor_section {
    background-color:#FFFFFF;

}

